name:                hbitcoind
version:             0.1.0.0
synopsis:            bitcoind haskell implementation by keizo042
description:         bitcoind haskell implementation
homepage:            https://github.com/keizo042/hbitcoind#readme
license:             BSD3
license-file:        LICENSE
author:              Kouichi Nakanishi
maintainer:          keizo.bookman@gmail.com
copyright:           2016 Kouichi Nakanishi
category:            Network, System
build-type:          Simple
cabal-version:       >=1.10

Library
  default-Language:    Haskell2010
  ghc-option:          -Wall
  exposed-modules:     Program.HBitCoin
                       Program.HBitCoin.NetWork
                       Program.HbitCoin.Utils
  build-depends:       base >= 4.7 && < 5

executable hbitcoind
  hs-source-dirs:      src
  main-is:             HbitCoind.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable hbitcoinctl
  hs-source-dirs:
  hs-source-dirs:      src
  main-is:             hbitcoinctl.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
